# plat

./: .gitignore  .npmignore  CONFIDENTIAL.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_COMPLETE.md  IMPROVEMENT_SUMMARY.md  LICENSE  MULTI_FILE_SUPPORT.md  QUICK_REFERENCE.md  README.md  SERVICE_WORKER_QUICK_REFERENCE.md  SESSION_SUMMARY.md  SIGNALING.md  STATIC_FILES.md  WEBRTC_SERVING_PLAN.md  authority-gis-migration-plan.md  package-lock.json  tsconfig.json
python/: README.md  pyproject.toml
python/plat/: __init__.py  __main__.py  authority_server.py  cli.py  cli_main.py  css_identity.py  css_server_transport_plugin.py  css_shared.py  css_transport_plugin.py  file_queue.py  file_transport_plugin.py  http_transport_plugin.py  http_webrtc_bridge.py  logging.py  openapi_client.py  openapi_codegen.py  plugins.py  response_serialize.py  rpc_protocol_plugin.py  server.py  server_types.py  transport_plugin.py  transports.py
python/samples/: README.md  __init__.py
python/samples/basic/: __init__.py  (+4 more)
python/tests/: test_cli_helpers.py  test_css_server_transport.py  test_date_coerce.py  test_http_webrtc_bridge.py  test_literalenum_support.py  test_openapi_client.py  test_response_serialize.py  test_samples.py  test_server.py  test_type_registry.py
python/z2/: __init__.py  auth.py  call_sessions.py  cli_main.py  client.py  date_coerce.py  decorators.py  errors.py  file_queue_protocol_plugin.py  literalenum_support.py  metadata.py  protocol_plugin.py  routing.py  rpc.py  rpc_transport_plugin.py  server.py  server_types.py  tools.py  type_registry.py
python_browser/: README.md  pyproject.toml
python_browser/plat_browser/: __init__.py  client.py  decorators.py  errors.py  metadata.py  plugins.py  server.py  types.py
python_browser/tests/: test_plat_browser.py
(+430 files in other folders)
