[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plat"
version = "0.1.0"
description = "Python client and server package for the plat API framework"
readme = "README.md"
license = "Unlicense"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.25",
    "pydantic>=2.8",
    "PyJWT>=2.8",
    "PyYAML>=6.0",
    "uvicorn>=0.30",
    "websockets>=12.0",
]

[project.scripts]
plat = "plat.cli_main:main"

[project.urls]
Repository = "https://github.com/modularizer/plat"

[tool.hatch.build.targets.wheel]
packages = ["plat"]
