[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modularizer-plat"
version = "0.6.0"
description = "Protocol and Language Agnostic Tooling Yielding Universal Semantics"
readme = "README.md"
license = "Unlicense"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.25",
    "pydantic>=2.8",
    "PyJWT>=2.8",
    "PyYAML>=6.0",
    "uvicorn>=0.30",
    "websockets>=12.0",
]

[project.optional-dependencies]
css = [
    "aiortc>=1.9",
    "cryptography>=42.0",
    "paho-mqtt>=2.1",
]

[project.scripts]
plat = "plat.cli_main:main"

[project.urls]
Repository = "https://github.com/modularizer/plat"

[tool.hatch.build.targets.wheel]
packages = ["plat"]
